Add opencensus tracing

--- a/php/composer.json
+++ b/php/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
-        "google/cloud-spanner": "^1.11"
+        "google/cloud-spanner": "^1.11",
+        "opencensus/opencensus": "~0.2"
     }
 }
