--- a/php/composer.json
+++ b/php/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "google/cloud-spanner": "^1.11",
-        "opencensus/opencensus": "~0.2"
+        "opencensus/opencensus": "~0.2",
+        "symfony/cache": "^4.1"
     }
 }
