--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -2,8 +2,8 @@ FROM php:7.2-fpm-alpine
 
 RUN apk add --no-cache --virtual=.build-deps zlib-dev autoconf gcc g++ make \
   && pecl install grpc protobuf opencensus-alpha apcu \
-  && docker-php-ext-install sysvshm \
-  && docker-php-ext-enable grpc protobuf opencensus \
+  && docker-php-ext-install sysvshm opcache \
+  && docker-php-ext-enable grpc protobuf opencensus apcu \
   && apk del .build-deps \
   && apk del *-dev
 
