--- a/php/composer.json
+++ b/php/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "google/cloud-spanner": "^1.11",
         "opencensus/opencensus": "~0.2",
-        "symfony/cache": "^4.1"
+        "symfony/cache": "^4.1",
+        "opencensus/opencensus-exporter-stackdriver": "~0.1"
     }
 }
